# BudgetArmsEngine

./: .clang-format.txt  .gitignore  CMakeLists.txt  CMakeSettings.json  EmscriptenToolchain.cmake  GitVersion.yml  README.md  TodoList.txt
BudgetEngine/: CMakeLists.txt
BudgetEngine/Commands/: Command.h  FireCommand.h  MoveCommand.h
BudgetEngine/Components/: Component.h  FpsCounterComponent.cpp  FpsCounterComponent.h  ImguiComponent.cpp  ImguiComponent.h  InputComponent.h  RenderComponent.h  SpriteComponent.cpp  SpriteComponent.h  TextComponent.cpp  TextComponent.h  TextureComponent.h  TransformComponent.h  TrashTheCacheComponent.h
BudgetEngine/Core/: Achievement.cpp  Achievement.h  AudioClip.h  BudgetEngine.cpp  BudgetEngine.h  Event.h  EventListener.h  EventQueue.cpp  EventQueue.h  EventTypes.h  Events.h  GameObject.cpp  GameObject.h  LoggingSoundSystem.cpp  LoggingSoundSystem.h  NullSoundSystem.h  Observer.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SdlAudioClip.cpp  SdlAudioClip.h  SdlSoundSystem.cpp  SdlSoundSystem.h  ServiceLocator.cpp  ServiceLocator.h  SoundSystem.h  Subject.h  TextObject.cpp  TextObject.h  Transform.cpp  Transform.h
BudgetEngine/Managers/: AchievementManager.h  InputManager.cpp  InputManager.h  ResourceManager.h  SceneManager.cpp  SceneManager.h  SteamManager.cpp  SteamManager.h
BudgetEngine/Singletons/: GameTime.h  ServiceLocator.h  Singleton.h
BudgetEngine/Wrappers/: AudioChunk.h  Controller.cpp  Controller.h  Font.cpp  Font.h  Keyboard.cpp  Keyboard.h  Texture2D.cpp  Texture2D.h
Commands/: Command.h  Command.hpp  GameActorCommand.h  GameActorCommand.hpp  MoveCommand.h
Components/: Component.h  Component.hpp  FpsCounterComponent.cpp  FpsCounterComponent.h  FpsCounterComponent.hpp  ImguiComponent.cpp  ImguiComponent.h  ImguiComponent.hpp  InputComponent.h  SpriteComponent.cpp  SpriteComponent.h  SpriteComponent.hpp  TextComponent.cpp  TextComponent.h  TextComponent.hpp  TextureComponent.cpp  TextureComponent.h  TextureComponent.hpp  TransformComponent.cpp  TransformComponent.h  TransformComponent.hpp  TrashTheCacheComponent.cpp  TrashTheCacheComponent.h
Core/: Achievement.cpp  Achievement.h  Achievement.hpp  AudioClip.h  AudioQueue.cpp  AudioQueue.h  BudgetEngine.cpp  BudgetEngine.h  BudgetEngine.hpp  Event.h  EventListener.h  EventListener.hpp  EventQueue.cpp  EventQueue.h  EventQueue.hpp  EventTypes.h  GameObject.cpp  GameObject.h  GameObject.hpp  HelperFunctions.h  HelperFunctions.hpp  LoggingAudioClip.h  LoggingSoundSystem.cpp  LoggingSoundSystem.h  NullAudioClip.h  NullSoundSystem.h  Observer.h  Observer.hpp  Renderer.cpp  Renderer.h  Renderer.hpp  RingBuffer.h  RingBuffer.hpp  Scene.cpp  Scene.h  Scene.hpp  SdlAudioClip.cpp  SdlAudioClip.h  SdlSoundSystem.cpp  SdlSoundSystem.h  (+16 more)
Game/: CMakeLists.txt  Main.cpp
Game/Base/: Achievement.h  CoilyStates.cpp  CoilyStates.h  QbertStates.cpp  QbertStates.h  SoundEvents.h
Game/Commands/: DamageCommand.h  FireCommand.h  MoveGameActorCommand.h  ScoreCommand.h  SoundTestCommand.h  SpriteTestCommand.h
Game/Components/: HealthComponent.cpp  HealthComponent.h  HealthDisplayComponent.cpp  HealthDisplayComponent.h  PyramidComponent.cpp  PyramidComponent.h  ScoreComponent.cpp  ScoreComponent.h  ScoreDisplayComponent.cpp  ScoreDisplayComponent.h
Game/Entities/: CoilyComponent.cpp  CoilyComponent.h  Qbert.cpp  Qbert.h  QbertComponent.cpp  QbertComponent.h
GameEngine/: GameEngine.cpp  GameEngine.h  InputManager.cpp  Main.cpp  ResourceManager.cpp  SceneManager.h  Singleton.h  Transform.h
Graphs/: AStar.cpp  AStar.h  AStar.hpp  Connection.cpp  Connection.hpp  ConnectionCostCalculator.h  ConnectionCostCalculator.hpp  Graph.cpp  Graph.h  Graph.hpp  GraphConnection.h  GraphConnection.hpp  GraphEnums.h  GraphNode.h  GraphNode.hpp  GraphNodeFactory.h  GraphNodeFactory.hpp  GridGraph.cpp  GridGraph.h  GridGraph.hpp  Heuristic.h  HeuristicFunctions.h  HeuristicFunctions.hpp  Node.cpp  Node.hpp  NodeFactory.hpp
Managers/: AchievementManager.h  AchievementManager.hpp  InputManager.cpp  InputManager.h  InputManager.hpp  ResourceManager.cpp  ResourceManager.h  ResourceManager.hpp  SceneManager.cpp  SceneManager.h  SceneManager.hpp  SteamManager.cpp  SteamManager.h  SteamManager.hpp
Singletons/: GameTime.h  GameTime.hpp  Singleton.h  Singleton.hpp
Sounds/: AudioClip.h  AudioClip.hpp  AudioQueue.h  LoggingAudioClip.h  LoggingSoundSystem.cpp  LoggingSoundSystem.h  LoggingSoundSystem.hpp  MixerSoundSystem.cpp  MixerSoundSystem.h  MixerSoundSystem.hpp  NullAudioClip.h  NullAudioClip.hpp  NullSoundSystem.h  NullSoundSystem.hpp  SdlAudioClip.cpp  SdlAudioClip.h  SdlAudioClip.hpp  SdlSoundSystem.cpp  SdlSoundSystem.h  SoLoudSoundSystem.cpp  SoLoudSoundSystem.hpp  SoundStructs.h  SoundStructs.hpp  SoundSystem.h  SoundSystem.hpp
Wrappers/: Audio.cpp  Audio.h  Audio.hpp  AudioChunk.cpp  AudioChunk.h  AudioMixer.cpp  AudioMixer.hpp  AudioTrack.cpp  AudioTrack.h  AudioTrack.hpp  Controller.cpp  Controller.h  Controller.hpp  Font.cpp  Font.h  Font.hpp  Keyboard.cpp  Keyboard.h  Keyboard.hpp  Mouse.cpp  Mouse.h  Mouse.hpp  Texture2D.cpp  Texture2D.h  Texture2D.hpp
